fix sections id request