@@ -14,19 +14,16 @@ import org.springframework.stereotype.Component;
 import java.math.BigDecimal;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Component
 public class DownloadProductConverter {
 
     public DownloadProduct mapDownloadProductRequestDtoToEntity(DownloadProductRequestDto dto, User user) {
         DownloadProduct product = new DownloadProduct();
-
         // In case is an update of product, we get the ID
-        if (dto.getId() != null && !dto.getUserId().isEmpty()) {
+        if (dto.getId() != null && !dto.getId().isEmpty()) {
             product.setId(UUID.fromString(dto.getId()));
         }
-
         product.setName(dto.getName());
         product.setDescription(dto.getDescription());
         product.setType(ProductType.DOWNLOAD);
@@ -39,6 +36,10 @@ public class DownloadProductConverter {
             List<SectionDownloadProduct> sections = dto.getSections().stream()
                     .map(secDto -> {
                         SectionDownloadProduct sec = new SectionDownloadProduct();
+                        // In case is an update of product, we get the ID
+                        if (secDto.getId() != null) {
+                            sec.setId(UUID.fromString(secDto.getId()));
+                        }
                         sec.setTitle(secDto.getTitle());
                         sec.setDescription(secDto.getDescription());
                         sec.setPosition(secDto.getPosition());
@@ -70,7 +71,7 @@ public class DownloadProductConverter {
                 sr.setDescription(sec.getDescription());
                 sr.setPosition(sec.getPosition());
                 return sr;
-            }).collect(Collectors.toList());
+            }).toList();
             response.setSections(sectionResponses);
         }
 
